test/libhyperion/syntaxTests/types/address/contract_payable_fallback_to_payable_address_implicitly.hyp
contract C {
  function f() public view {
    address payable a = this;
    a;
  }
  fallback() external payable {
  }
}
// ----
// Warning 3628: (0-120): This contract has a payable fallback function, but no receive quanta function. Consider adding a receive quanta function.
// TypeError 9574: (46-70): Type contract C is not implicitly convertible to expected type address payable.
